--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "start": "node __sapper__/build"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.2.1",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "sirv": "^1.0.10"
@@ -41,6 +42,7 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-replace": "^2.3.4",
+    "autoprefixer": "^10.2.5",
     "cross-env": "^7.0.3",
     "cssnano": "^4.1.10",
     "eslint": "^7.15.0",
@@ -48,7 +50,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-svelte3": "^2.7.3",
     "kleur": "^4.1.3",
-    "postcss": "^8.2.1",
+    "postcss": "^8.2.7",
     "postcss-import": "^13.0.0",
     "rollup": "^2.34.2",
     "rollup-plugin-svelte": "^7.0.0",
@@ -56,6 +58,6 @@
     "sapper": "^0.28.10",
     "svelte": "^3.31.0",
     "svelte-preprocess": "^4.6.1",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.3"
   }
 }
