--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "start": "node __sapper__/build"
   },
   "dependencies": {
+    "@rollup/plugin-typescript": "^8.2.0",
     "@tailwindcss/forms": "^0.2.1",
     "compression": "^1.7.4",
+    "currency.js": "^2.0.3",
     "express": "^4.17.1",
-    "sirv": "^1.0.10"
+    "sirv": "^1.0.10",
+    "tslib": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -38,10 +41,12 @@
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.10",
     "@babel/runtime": "^7.12.5",
+    "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-replace": "^2.3.4",
+    "@tsconfig/svelte": "^1.0.10",
     "autoprefixer": "^10.2.5",
     "cross-env": "^7.0.3",
     "cssnano": "^4.1.10",
@@ -57,7 +62,9 @@
     "rollup-plugin-terser": "^7.0.2",
     "sapper": "^0.28.10",
     "svelte": "^3.31.0",
-    "svelte-preprocess": "^4.6.1",
-    "tailwindcss": "^2.0.3"
+    "svelte-check": "^1.2.3",
+    "svelte-preprocess": "^4.6.9",
+    "tailwindcss": "^2.0.3",
+    "typescript": "^4.2.3"
   }
 }
