--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-replace": "^2.3.4",
     "@tsconfig/svelte": "^1.0.10",
+    "@vercel/node": "^1.9.0",
     "autoprefixer": "^10.2.5",
     "cross-env": "^7.0.3",
     "cssnano": "^4.1.10",
