--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@rollup/plugin-typescript": "^8.2.0",
     "@tailwindcss/forms": "^0.2.1",
+    "axios": "^0.21.1",
     "compression": "^1.7.4",
     "currency.js": "^2.0.3",
     "express": "^4.17.1",
@@ -47,6 +48,7 @@
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-replace": "^2.3.4",
     "@tsconfig/svelte": "^1.0.10",
+    "@types/node": "^14.14.32",
     "@vercel/node": "^1.9.0",
     "autoprefixer": "^10.2.5",
     "cross-env": "^7.0.3",
