--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "lib": ["DOM", "ES2017", "WebWorker"],
     "target": "es2017",
+    "noImplicitAny": false,
     "allowSyntheticDefaultImports": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -10,7 +11,7 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "strict": true,
-    "types": ["svelte"]
+    "types": ["svelte", "@types/node"]
   },
   "include": ["src/**/*", "src/node_modules/**/*"],
   "exclude": ["node_modules/*", "__sapper__/*", "static/*"]
