😈 woops: Add a looot

--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "axios": "^0.21.1",
     "compression": "^1.7.4",
     "currency.js": "^2.0.3",
+    "dayjs": "^1.10.4",
     "express": "^4.17.1",
+    "finnhub": "^1.2.1",
     "sirv": "^1.0.10",
     "tslib": "^2.1.0"
   },
