--- a/static/manifest.json
+++ b/static/manifest.json
@@ -6,8 +6,26 @@
   "dir": "ltr",
   "icons": [
     {
-      "src": "logo-512.png",
+      "src": "/favicon/android-chrome-512x512.png",
       "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/favicon/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/favicon/favicon-32x32.png",
+      "sizes": "32x32",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/favicon/favicon-16x16.png",
+      "sizes": "16x16",
       "type": "image/png",
       "purpose": "any maskable"
     }
