--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "strict": true,
-    "types": ["svelte", "@types/node"]
+    "types": ["svelte", "dayjs", "@types/node"]
   },
   "include": ["src/**/*", "src/node_modules/**/*"],
   "exclude": ["node_modules/*", "__sapper__/*", "static/*"]
